--- a/package.json
+++ b/package.json
@@ -43,12 +43,15 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dom-to-image-more": "^3.7.2",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "pdf-lib": "^1.17.1",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
