--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "15.2.8",
     "next-themes": "latest",
     "pdf-lib": "^1.17.1",
-    "react": "^19",
+    "react": "19.2.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^19",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
